--- a/src/main/resources/assets/biotech/lang/en_us.json
+++ b/src/main/resources/assets/biotech/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "block.biotech.net_trap": "Net Trap",
+  "block.biotech.breeder": "Breeder",
   "item.biotech.cow": "Cow",
   "item.biotech.baby_cow": "Baby Cow",
   "item.biotech.chicken": "Chicken",
