Breeder container and gui

--- a/src/main/resources/assets/biotech/lang/en_us.json
+++ b/src/main/resources/assets/biotech/lang/en_us.json
@@ -11,5 +11,6 @@
   "item.biotech.baby_sheep": "Baby Sheep",
   "item.biotech.rabbit": "Rabbit",
   "item.biotech.baby_rabbit": "Baby Rabbit",
-  "itemGroup.biotech": "Biotech"
+  "itemGroup.biotech": "Biotech",
+  "menu.title.biotech.breeder": "Breeder"
 }
