Custom recipe type
Breeder now have a json based recipes.

--- a/src/main/resources/assets/biotech/lang/en_us.json
+++ b/src/main/resources/assets/biotech/lang/en_us.json
@@ -1,6 +1,6 @@
 {
   "block.biotech.net_trap": "Net Trap",
-  "block.biotech.breeder": "Breeder",
+  "block.biotech.breeder": "Breeding Chamber",
   "block.biotech.biotech_machine_casing": "Biotech Machine Casing",
   "block.biotech.item_input_hatch": "Item Input Hatch",
   "block.biotech.item_output_hatch": "Item Output Hatch",
