--- a/src/main/resources/assets/biotech/lang/en_us.json
+++ b/src/main/resources/assets/biotech/lang/en_us.json
@@ -1,13 +1,18 @@
 {
   "block.biotech.net_trap": "Net Trap",
+
+  "block.biotech.biotech_machine_casing": "Biotech Machine Casing",
+
   "block.biotech.breeding_chamber": "Breeding Chamber",
   "block.biotech.terrestrial_habitat": "Terrestrial Habitat",
-  "block.biotech.biotech_machine_casing": "Biotech Machine Casing",
+  "block.biotech.slaughterhouse": "Slaughterhouse",
+
   "block.biotech.item_input_hatch": "Item Input Hatch",
   "block.biotech.item_output_hatch": "Item Output Hatch",
   "block.biotech.fluid_input_hatch": "Fluid Input Hatch",
   "block.biotech.fluid_output_hatch": "Fluid Output Hatch",
   "block.biotech.energy_input_hatch": "Energy Input Hatch",
+
   "item.biotech.cow": "Cow",
   "item.biotech.baby_cow": "Baby Cow",
   "item.biotech.chicken": "Chicken",
@@ -18,12 +23,16 @@
   "item.biotech.baby_sheep": "Baby Sheep",
   "item.biotech.rabbit": "Rabbit",
   "item.biotech.baby_rabbit": "Baby Rabbit",
+
   "itemGroup.biotech": "Biotech",
+
   "menu.title.biotech.breeding_chamber": "Breeding Chamber",
+  "menu.title.biotech.terrestrial_habitat": "Terrestrial Habitat",
+  "menu.title.biotech.slaughterhouse": "Slaughterhouse",
+
   "menu.title.biotech.item_input_hatch": "Item Input Hatch",
   "menu.title.biotech.item_output_hatch": "Item Output Hatch",
   "menu.title.biotech.fluid_input_hatch": "Fluid Input Hatch",
   "menu.title.biotech.fluid_output_hatch": "Fluid Output Hatch",
-  "menu.title.biotech.energy_input_hatch": "Energy Input Hatch",
-  "menu.title.biotech.terrestrial_habitat": "Terrestrial Habitat"
+  "menu.title.biotech.energy_input_hatch": "Energy Input Hatch"
 }
