--- a/src/main/resources/assets/biotech/lang/en_us.json
+++ b/src/main/resources/assets/biotech/lang/en_us.json
@@ -23,6 +23,7 @@
   "item.biotech.baby_sheep": "Baby Sheep",
   "item.biotech.rabbit": "Rabbit",
   "item.biotech.baby_rabbit": "Baby Rabbit",
+  "item.biotech.debug_structure_analyzer": "Debug Structure Analyzer",
 
   "itemGroup.biotech": "Biotech",
 
